<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dhenton9000.webapp</groupId>
	<artifactId>basicwebapp</artifactId>
	<packaging>war</packaging>
	<name />
	<version>0.0.1-SNAPSHOT</version>
	<description />
	<build>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<outputDirectory>${basedir}/src/main/webapp/WEB-INF/classes</outputDirectory>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<webappDirectory>${basedir}/src/main/webapp</webappDirectory>
					<warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>./src/main/webapp/WEB-INF/lib</directory>
							<includes>
								<include>*.jar</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			 

 <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.2.0.RC0</version>
                <configuration>
                    <scanIntervalSeconds>10</scanIntervalSeconds>
                                                             
                    <webAppConfig>
                        <contextPath>/wicket-sandbox</contextPath>
                        <tempDirectory>${project.build.directory}/work</tempDirectory>
                        
                        </webAppConfig>

                      
                        
                        <httpConnector>
                            <port>9090</port>
                            <idleTimeout>60000</idleTimeout>
                        </httpConnector>
                    
                       
                </configuration>
            </plugin>


		</plugins>
	</build>
   
           <reporting>
                <plugins>
                        <plugin>
                                <!-- http://maven.apache.org/plugins/maven-surefire-report-plugin/ -->
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-surefire-report-plugin</artifactId>
                                <version>2.4.3</version>
                                <configuration>
                                        <showSuccess>false</showSuccess>
                                <!-- surefire uses a new jvm, MAVEN_OPTS are ignored, so you better set the memory options here -->
                                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                                </configuration>
                        </plugin>
                        <plugin>
                                <!-- http://maven.apache.org/plugins/maven-javadoc-plugin/ -->
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-javadoc-plugin</artifactId>
                                <version>2.6.1</version>
                        </plugin>
                        <plugin>
                                <!-- http://maven.apache.org/plugins/maven-jxr-plugin/ -->
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-jxr-plugin</artifactId>
                                <version>2.1</version>
                        </plugin>
                        <plugin>
                                <!-- http://mojo.codehaus.org/taglist-maven-plugin/ -->
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>taglist-maven-plugin</artifactId>
                                <version>2.4</version>
                        </plugin>
                        <plugin>
                                <!-- http://maven.apache.org/plugins/maven-pmd-plugin/ -->
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-pmd-plugin</artifactId>
                                <version>2.4</version>
                                <configuration>
                                        <linkXref>true</linkXref>
                                        <targetJdk>${jdk.version}</targetJdk>
                                </configuration>
                        </plugin>
                        <plugin>
                                <!-- http://maven.apache.org/plugins/maven-changes-plugin/ -->
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-changes-plugin</artifactId>
                                <version>2.3</version>
                                <configuration>
                                        <xmlPath>src/site/changes.xml</xmlPath>
                                </configuration>
                                <reportSets>
                                        <reportSet>
                                                <reports>
                                                        <report>changes-report</report>
                                                </reports>
                                        </reportSet>
                                </reportSets>
                        </plugin>
                        <plugin>
                                <!-- http://mojo.codehaus.org/cobertura-maven-plugin/ -->
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>cobertura-maven-plugin</artifactId>
                                <version>2.4</version>
                        </plugin>
                        <plugin>
                                <!-- http://mojo.codehaus.org/l10n-maven-plugin/ -->
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>l10n-maven-plugin</artifactId>
                                <version>1.0-alpha-2</version>
                                <configuration>
                                        <locales>
                                                <locale>en</locale>
                                                <locale>fr</locale>
                                        </locales>
                                </configuration>
                        </plugin>
                        <plugin>
                                <!-- http://mojo.codehaus.org/findbugs-maven-plugin/ -->
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>findbugs-maven-plugin</artifactId>
                                <version>2.3.1</version>
                                <configuration>
                                        <findbugsXmlOutput>true</findbugsXmlOutput>
                                        <xmlOutput>true</xmlOutput>
                                </configuration>
                        </plugin>
                </plugins>
        </reporting>

   
   
   
   
	<dependencies>


		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.15</version>
      <exclusions>
        <exclusion>
        <groupId>com.sun.jmx</groupId>
        <artifactId>jmxri</artifactId>
        </exclusion>

        <exclusion>
        <groupId>com.sun.jdmk</groupId>
        <artifactId>jmxtools</artifactId>
        </exclusion>
      </exclusions>
		</dependency>

	</dependencies>
</project>
